[gd_scene load_steps=3 format=3 uid="uid://cw7h4v2j9nq8x"]

[ext_resource type="Script" path="res://scripts/wall_riding_zone.gd" id="1_x8j2a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(5, 50, 10)

[node name="WallRidingZone" type="Area3D"]
script = ExtResource("1_x8j2a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_wall")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"] 